--- a/backend/Persistence/src/main/resources/application.properties
+++ b/backend/Persistence/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/MathBlitz
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 # JPA properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.springframework.web:DEBUG
+logging.level.org.springframework.web.servlet.handler.AbstractHandlerMapping:DEBUG
+logging.level.org.springframework.web.cors:DEBUG
