added rest of leaderboard shown scores

--- a/backend/Persistence/src/main/resources/application.properties
+++ b/backend/Persistence/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 logging.level.org.springframework.web:DEBUG
 logging.level.org.springframework.web.servlet.handler.AbstractHandlerMapping:DEBUG
 logging.level.org.springframework.web.cors:DEBUG
